--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "engines": {
+    "node": ">=12.21.0",
+    "npm": ">=6.14.11"
+  },
   "name": "overhide-client-auth",
   "version": "1.0.0",
   "description": "Generate client API keys for retrieval of tokens to use overhide services.",
